cp project/force-app/main/default/objects/Company_Update__c/Company_Update__c.object-meta.xml
<CustomObject>
    <label>Company Update</label>
    <pluralLabel>Company Updates</pluralLabel>
    <nameField>
        <label>Title</label>
        <type>Text</type>
        <length>255</length>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>