cp project/force-app/main/default/objects/Company_Update__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>