cp project/force-app/main/default/objects/Company_Update__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Published</fullName><label>Published</label></value>
            <value><fullName>Expired</fullName><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>